testing to see if this fixes border width on ios

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -149,7 +149,7 @@ table th + th {
 }
 
 table td + td {
-  border-left: 1px solid #343a40;
+  border-left: 0.5px solid #343a40;
 }
 
 /* Custom Scrollbar CSS */
